// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders correctly 1`] = `
<div
  id="jh-sidebar"
  style={
    Object {
      "WebkitFlex": "0 0 18em",
      "backgroundColor": "#eee",
      "borderRight": "2px solid #ddd",
      "flex": "0 0 18em",
      "fontFamily": "sans-serif",
      "fontSize": "0.8em",
      "overflow": "auto",
      "padding": "0.3em 0",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": "1.1em",
        "marginTop": "0.4em",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "0 0 30px",
          "flex": "0 0 30px",
        }
      }
    >
      <div
        dataMockType="Link"
        style={
          Object {
            "color": "currentColor",
            "margin": "0.3em",
            "padding": "0.3em",
          }
        }
        to="link/to/parent/folder"
      >
        <div
          style={
            Object {
              "color": "blue",
              "fontWeight": "bold",
            }
          }
        >
          Link
        </div>
        <i
          className="giu-icon fa fa-chevron-left"
          style={
            Object {
              "color": undefined,
              "cursor": undefined,
              "display": "inline-block",
              "fontSize": "1.33333333em",
              "letterSpacing": "normal",
              "textAlign": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      style={
        Object {
          "WebkitFlex": 1,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      title="Subtitle"
    >
      Title
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 1 30px",
          "flex": "0 1 30px",
        }
      }
    >
      <i
        className="giu-icon fa fa-file-code-o"
        id="jh-toggle-raw"
        style={
          Object {
            "color": "gray",
            "cursor": undefined,
            "display": "inline-block",
            "fontSize": "1.33333333em",
            "letterSpacing": "normal",
            "textAlign": undefined,
            "width": undefined,
          }
        }
        title="Toggle raw/HTML snapshot"
      />
    </div>
  </div>
  one
  two
</div>
------------HTML PREVIEW---------------
<div
  id="jh-sidebar"
  style="-webkit-flex:0 0 18em;background-color:#eee;border-right:2px solid #ddd;flex:0 0 18em;font-family:sans-serif;font-size:0.8em;overflow:auto;padding:0.3em 0;"
>
  <div style="align-items:baseline;display:flex;flex-direction:row;margin-bottom:1.1em;margin-top:0.4em;">
    <div style="-webkit-flex:0 0 30px;flex:0 0 30px;">
      <div
        dataMockType="Link"
        style="color:currentColor;margin:0.3em;padding:0.3em;"
        to="link/to/parent/folder"
      >
        <div style="color:blue;font-weight:bold;">
          Link
        </div>
        <i
          class="giu-icon fa fa-chevron-left"
          style="display:inline-block;font-size:1.33333333em;letter-spacing:normal;"
        >
        </i>
      </div>
    </div>
    <div
      style="-webkit-flex:1;flex:1;font-weight:bold;text-align:center;"
      title="Subtitle"
    >
      Title
    </div>
    <div style="-webkit-flex:0 1 30px;flex:0 1 30px;">
      <i
        class="giu-icon fa fa-file-code-o"
        id="jh-toggle-raw"
        style="color:gray;display:inline-block;font-size:1.33333333em;letter-spacing:normal;"
        title="Toggle raw/HTML snapshot"
      >
      </i>
    </div>
  </div>
  one
  two
</div>
`;

exports[`Sidebar renders correctly without linkBack 1`] = `
<div
  id="jh-sidebar"
  style={
    Object {
      "WebkitFlex": "0 0 18em",
      "backgroundColor": "#eee",
      "borderRight": "2px solid #ddd",
      "flex": "0 0 18em",
      "fontFamily": "sans-serif",
      "fontSize": "0.8em",
      "overflow": "auto",
      "padding": "0.3em 0",
    }
  }
>
  <div
    style={
      Object {
        "alignItems": "baseline",
        "display": "flex",
        "flexDirection": "row",
        "marginBottom": "1.1em",
        "marginTop": "0.4em",
      }
    }
  >
    <div
      style={
        Object {
          "WebkitFlex": "0 0 30px",
          "flex": "0 0 30px",
        }
      }
    >
      <div
        dataMockType="Link"
        style={
          Object {
            "color": "currentColor",
            "margin": "0.3em",
            "padding": "0.3em",
          }
        }
        to="#"
      >
        <div
          style={
            Object {
              "color": "blue",
              "fontWeight": "bold",
            }
          }
        >
          Link
        </div>
        <i
          className="giu-icon fa fa-chevron-left"
          style={
            Object {
              "color": "#999999",
              "cursor": undefined,
              "display": "inline-block",
              "fontSize": "1.33333333em",
              "letterSpacing": "normal",
              "textAlign": undefined,
              "width": undefined,
            }
          }
        />
      </div>
    </div>
    <div
      style={
        Object {
          "WebkitFlex": 1,
          "flex": 1,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
      title="Subtitle"
    >
      Title
    </div>
    <div
      style={
        Object {
          "WebkitFlex": "0 1 30px",
          "flex": "0 1 30px",
        }
      }
    >
      <i
        className="giu-icon fa fa-file-code-o"
        id="jh-toggle-raw"
        style={
          Object {
            "color": "gray",
            "cursor": undefined,
            "display": "inline-block",
            "fontSize": "1.33333333em",
            "letterSpacing": "normal",
            "textAlign": undefined,
            "width": undefined,
          }
        }
        title="Toggle raw/HTML snapshot"
      />
    </div>
  </div>
  one
  two
</div>
------------HTML PREVIEW---------------
<div
  id="jh-sidebar"
  style="-webkit-flex:0 0 18em;background-color:#eee;border-right:2px solid #ddd;flex:0 0 18em;font-family:sans-serif;font-size:0.8em;overflow:auto;padding:0.3em 0;"
>
  <div style="align-items:baseline;display:flex;flex-direction:row;margin-bottom:1.1em;margin-top:0.4em;">
    <div style="-webkit-flex:0 0 30px;flex:0 0 30px;">
      <div
        dataMockType="Link"
        style="color:currentColor;margin:0.3em;padding:0.3em;"
        to="#"
      >
        <div style="color:blue;font-weight:bold;">
          Link
        </div>
        <i
          class="giu-icon fa fa-chevron-left"
          style="color:#999999;display:inline-block;font-size:1.33333333em;letter-spacing:normal;"
        >
        </i>
      </div>
    </div>
    <div
      style="-webkit-flex:1;flex:1;font-weight:bold;text-align:center;"
      title="Subtitle"
    >
      Title
    </div>
    <div style="-webkit-flex:0 1 30px;flex:0 1 30px;">
      <i
        class="giu-icon fa fa-file-code-o"
        id="jh-toggle-raw"
        style="color:gray;display:inline-block;font-size:1.33333333em;letter-spacing:normal;"
        title="Toggle raw/HTML snapshot"
      >
      </i>
    </div>
  </div>
  one
  two
</div>
`;
